Phase 2. Partial removal of dependencies on Swing.