@@ -18,8 +18,7 @@ public class Main {
         startTime = System.currentTimeMillis();
         try {
             if (isMacOSX()) {
-                GURLHandler.getInstance().register();
-                MacEventHandler.instance().register();
+                MacEventHandler.instance();
             }
 
             SplashScreen splashScreen = SplashScreen.getSplashScreen();
@@ -75,7 +74,7 @@ public class Main {
             // which would slow the speed of class-loading, causing the splash to be
             // displayed later.
             Class<?> loadClass = Class.forName("org.limewire.ui.swing.GuiLoader");
-            Object loadInstance = loadClass.newInstance();
+            Object loadInstance = loadClass.getDeclaredConstructor().newInstance();
             Method loadMethod = loadClass.getMethod("load", new Class[] { String[].class, Frame.class, Image.class } );
             loadMethod.invoke(loadInstance, args, splash, splashImage);
         } catch(Throwable t) {
